# applykit

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  lefthook.yml  package.json
.github/workflows/: ci-backend.yml  ci-frontend.yml
backend/: .env.example  Dockerfile  alembic.ini  entrypoint.sh  main.py  pyproject.toml  requirements.txt
backend/app/: config.py  database.py  dependencies.py  http_client.py  main.py  models.py  schemas.py  utils.py
backend/app/exceptions/: __init__.py  base.py  llm.py
backend/app/routes/: analyze.py  applications.py  generate.py  history.py  import_cv.py  profile.py  profiles.py  scrape.py  settings.py  usage.py
backend/app/services/: fit_analysis.py  llm.py  parse_job_description.py  parser.py  pdf.py  prompts.py  scraper.py  settings.py
backend/integration/: pdf.py  template.py
backend/integration/templates/cover_letter/: standard_v1.html
backend/integration/templates/cv/: modern_v1.html
backend/migrations/: env.py
backend/migrations/versions/: 1284f7500697_add_llm_usage_log.py  2c4571a050e3_add_role_title_location_salary_to_.py  33c54260d07a_add_location_salary_job_description_to_.py  3ff3cb29e1fa_smart_url_cover_letter_columns.py  574a3faf36f1_add_multi_profile_support.py  5761424ec8e5_initial_profile_table.py  62ecad596d28_add_history_tables.py  b79c1cca3379_add_application_tracker.py  d89ac2dc3096_add_app_settings_table.py
backend/tests/: test_models.py
docs/research/: 2026-03-16-job-url-scraping.md
frontend/: .env.example  Dockerfile  README.md  package.json  svelte.config.js
(+82 files in other folders)
